@@ -13,6 +13,7 @@ x.x:
 - fixed: index_blog widget slider mode
 - fixed: index_blog widget preview mode
 - fixed: index_blog widget showing unpublished blogs
+- fixed: blog widget showing unpublished blogs
 
 2.2 (2012-03-02):
 
